[gd_scene load_steps=9 format=2]

[ext_resource path="res://hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://hud/elements/revolver_ammo/revolver_ammo_indicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/crosshairs/melee.png" type="Texture" id=3]
[ext_resource path="res://hud/fonts/huge_text.tres" type="DynamicFont" id=4]
[ext_resource path="res://menu/hammer.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "hammi"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hammer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -89.9999, 90.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "detransit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "transit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_perf_transit"
} ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="InGameHUD" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reticle" type="TextureRect" parent="InGameHUD"]
modulate = Color( 1, 1, 1, 0.5 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RevolverAmmo" parent="InGameHUD" instance=ExtResource( 2 )]
position = Vector2( 1525, 825 )
scale = Vector2( 1.5, 1.5 )

[node name="SceneTransit" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackScreen" type="ColorRect" parent="SceneTransit"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblLoad" type="Label" parent="SceneTransit"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 34.9228
margin_top = -169.874
margin_right = 448.923
margin_bottom = -15.874
custom_fonts/font = ExtResource( 4 )
text = "Loading..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hammer" type="Sprite" parent="SceneTransit"]
position = Vector2( 1369.93, 827.035 )
rotation = -1.57079
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
offset = Vector2( 0, -100 )

[node name="HammerWhack" type="AnimationPlayer" parent="SceneTransit"]
autoplay = "hammi"
playback_speed = 0.75
anims/hammi = SubResource( 1 )

[node name="Transit" type="AnimationPlayer" parent="SceneTransit"]
anims/detransit = SubResource( 2 )
anims/transit = SubResource( 3 )
